# resona

./: README.md  config.yaml  pyproject.toml
resources/: emotions.json
src/: app.py  app_dialogs.py  app_emotions.py  cli.py  config.py  models.py
src/api/: api.py  dependencies.py  routes.py
src/backend/: audio_engine.py  embedding.py  engine.py  io.py  store.py
src/dialogs/: cluster.py  orchestrator.py  resolver.py  worker.py
src/emotions/: manager.py
src/tune/: data_handler.py  monitor.py  orchestrator.py  registry.py  trainer.py
src/ui/: components.py  dialogs_create.py  dialogs_dashboard.py  dialogs_editor.py  dialogs_monitor.py  explorer.py  search.py  session.py
